Massive redo of website pages

--- a/about_us.html
+++ b/about_us.html
@@ -8,30 +8,44 @@
 </head>
 <body>
 
-    <header class="site-header">
-        <a href="index.html" class="nav-logo">Audacious</a>
+  <header class="site-header">
+    <a href="index.html" class="nav-logo"><span>A</span>udacious</a>
 
-        <nav class="navbar">
-            <ul class="home-links">
-                <li class="nav-item"><a href="#">Interviews</a></li>
-                <li class="nav-item"><a href="#">Music &#38; Reviews</a></li>
-                <li class="nav-item"><a href="#">Art</a></li>
-                <li class="nav-item"><a href="about_us.html">About Us</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar">
+      <ul class="home-links">
+        <li class="nav-item"><a href="#">Interviews</a></li>
+        <li class="nav-item"><a href="#">Music &#38; Reviews</a></li>
+        <li class="nav-item"><a href="#">Art</a></li>
+        <li class="nav-item"><a href="about_us.html">About Us</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main class="content">
 
-    <section id="about">
+    <section>
+      <h1><span>Our Stor</span>y: A Love Letter to Emerging Art</h1>
+      <div id="about-section">
+        <p>Welcome to Audacious, a magazine that is fueled by a deep appreciation for the artists who dare to be different. We're passionate about sharing their stories, celebrating their work, and connecting them with a global audience of art lovers.</p>
+        <p>Through intimate profiles, inspiring stories, and captivating imagery, we'll capture the essence of a life lived creatively. We explore the struggles, the triumphs, and the unwavering dedication that drives these artists to pursue their passions.</p>
+        <p>We aim to celebrate the creative spirit. We believe that art is not just something you do, it's a way of life. This magazine is dedicated to those who embrace that philosophy with passion and conviction.</p>
+        <p>Rather than chasing trends, Audacious will prioritise quality over trendiness, amplifying exceptional art regardless of it's current popularity.</p>
+      </div>
+    </section>
 
-      <h1 id="section-title">Our Story: A Love Letter to Emerging Art</h1>
-      <p>Welcome to Audacious, a magazine that is fueled by a deep appreciation for the artists who dare to be different. We're passionate about sharing their stories, celebrating their work, and connecting them with a global audience of art lovers.</p>
-      <p>Through intimate profiles, inspiring stories, and captivating imagery, we'll capture the essence of a life lived creatively. We explore the struggles, the triumphs, and the unwavering dedication that drives these artists to pursue their passions.</p>
-      <p>We aim celebrate of the creative spirit. We believe that art is not just something you do, it's a way of life. This magazine is dedicated to those who embrace that philosophy with passion and conviction.</p>
+    <section class="editor">
+      <div id="about-editor">
+        <h2>Keleabetse Mookeletsi</h2>
+        <p>Born and raised in Mabopane, Pretoria, Keleabetse shares a deep passion for music discovery. Driven by a desire to amplify emerging artists, he aims to introduce audiences to undiscovered gems and help them shine.</p>
+      </div>
+      <img src="media/Kelea.jpg" alt="editor of magazine smiling at camera">
     </section>
 
   </main>
+
+  <footer>
+    footer
+  </footer>
 
 </body>
 </html>
