Recreated site responsiveness

--- a/about_us.html
+++ b/about_us.html
@@ -29,31 +29,30 @@
     <script src="hamburger-menu.js"></script>
   </header>
 
-  <main class="content">
 
-    <section>
-      <h1><span>Our Stor</span>y: A Love Letter to Emerging Art</h1>
-      <div id="about-section">
-        <p>Welcome to Audacious, a magazine that is fueled by a deep appreciation for the artists who dare to be different. We're passionate about sharing their stories, celebrating their work, and connecting them with a global audience of art lovers.</p>
-        <p>Through intimate profiles, inspiring stories, and captivating imagery, we'll capture the essence of a life lived creatively. We explore the struggles, the triumphs, and the unwavering dedication that drives these artists to pursue their passions.</p>
-        <p>We aim to celebrate the creative spirit. We believe that art is not just something you do, it's a way of life. This magazine is dedicated to those who embrace that philosophy with passion and conviction.</p>
-        <p>Rather than chasing trends, Audacious will prioritise quality over trendiness, amplifying exceptional art regardless of it's current popularity.</p>
+  <main class="page-container">
+    <div class="grid">
+      <div class="col-span">
+        <article class="margin">
+          <div class="page-content">
+            <section class="our_story">
+              <h1><span>Our Stor</span>y: A Love Letter to Emerging Art</h1>
+              <p>Welcome to Audacious, a magazine that is fueled by a deep appreciation for the artists who dare to be different. We're passionate about sharing their stories, celebrating their work, and connecting them with a global audience of art lovers.</p>
+              <p>Through intimate profiles, inspiring stories, and captivating imagery, we'll capture the essence of a life lived creatively. We explore the struggles, the triumphs, and the unwavering dedication that drives these artists to pursue their passions.</p>
+              <p>We aim to celebrate the creative spirit. We believe that art is not just something you do, it's a way of life. This magazine is dedicated to those who embrace that philosophy with passion and conviction.</p>
+              <p>Rather than chasing trends, Audacious will prioritise quality over trendiness, amplifying exceptional art regardless of it's current popularity.</p>
+            </section>
+            <section class="about_us">
+              <div class="about_us_text">
+                <h2>Keleabetse Mookeletsi</h2>
+                <p>Born and raised in Mabopane, Pretoria, Keleabetse shares a deep passion for music discovery. Driven by a desire to amplify emerging artists, he aims to introduce audiences to undiscovered gems and help them shine.</p>
+              </div>
+              <img src="media/Kelea.jpg" alt="">
+            </section>
+          </div>
+        </article>
       </div>
-    </section>
-
-    <section class="editor">
-      <div id="about-editor">
-        <h2>Keleabetse Mookeletsi</h2>
-        <p>Born and raised in Mabopane, Pretoria, Keleabetse shares a deep passion for music discovery. Driven by a desire to amplify emerging artists, he aims to introduce audiences to undiscovered gems and help them shine.</p>
-      </div>
-      <img src="media/Kelea.jpg" alt="editor of magazine smiling at camera">
-    </section>
-
+    </div>
   </main>
-
-  <footer>
-    footer
-  </footer>
-
 </body>
 </html>
