--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
   </header>
     
     <main class="content">
-        <section class="sunset">
-            <div id="about-sunset">
-              <h1>A Sunset Serenade: T!MBO &#38; D3NZL's '<span>Safari's Sunset</span>' Explored</h1>
-            </div>
-            <img src="media/Safari's Sunset.jpg" alt="Safari's Sunset album art cover">
-          </section>
+        <div>
+            <section class="sunset">
+                <div id="about-sunset">
+                    <h1>A Sunset Serenade: T!MBO &#38; D3NZL's '<span>Safari's Sunset</span>' Explored</h1>
+                </div>
+                <div>
+                    <img src="media/Safari's Sunset.jpg" alt="Safari's Sunset album art cover">
+                </div>
+            </section>
+        </div>
     </main>
 
 </body>
